test_programs/compile_failure/noirc_frontend_tests_indexing_array_with_non_u32/src/main.nr

    fn main() {
        let index: u64 = 0;
        let array = [1, 2, 3];
        let _ = array[index];
    }
    